--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,8 @@
 </head>
 
 <body>
-	<iframe src="https://www.grapeapp.it/mobile/" frameborder="0" scrolling="yes" style="display:none;" id="mainFrame"></iframe>
+	<!--<iframe src="https://www.grapeapp.it/mobile/" frameborder="0" scrolling="yes" style="display:none;" id="mainFrame"></iframe>-->
+    <div id="site"></div>
     <div class="app" id="app">
         <div id="deviceready" class="blink">
             <p class="event listening">Caricamento in corso...</p>
