--- a/www/index.html
+++ b/www/index.html
@@ -37,14 +37,14 @@
     * Create your own at http://cspisawesome.com
     -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>GrapeApp.it</title>
 </head>
 
 <body>
-	<!--<iframe src="https://www.grapeapp.it/mobile/" frameborder="0" scrolling="yes" style="display:none;" id="mainFrame"></iframe>-->
-    <div id="site"></div>
     <div class="app" id="app">
         <div id="deviceready" class="blink">
             <p class="event listening">Caricamento in corso...</p>
