--- a/www/index.html
+++ b/www/index.html
@@ -27,8 +27,17 @@
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
-    <meta http-equiv="Content-Security-Policy" content="default-src * gap://* 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
-    
+    <script>
+        var deviceType = (navigator.userAgent.match(/iPad/i))  == "iPad" ? "iPad" : (navigator.userAgent.match(/iPhone/i))  == "iPhone" ? "iPhone" : (navigator.userAgent.match(/Android/i)) == "Android" ? "Android" : (navigator.userAgent.match(/BlackBerry/i)) == "BlackBerry" ? "BlackBerry" : "null";
+        switch(deviceType){
+            case 'Android':
+                document.write('<meta http-equiv="Content-Security-Policy" content="default-src * gap://* \'unsafe-inline\'; style-src \'self\' \'unsafe-inline\'; media-src *" />');
+            break;
+            default:
+                document.write('<meta http-equiv="Content-Security-Policy" content="default-src \'self\' data:* gap://* tel:* \'unsafe-inline\' \'unsafe-eval\'; style-src \'self\' \'unsafe-inline\'" />');
+            break;
+        }
+    </script>
     <!-- Good default declaration:
     * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
     * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
