--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
                 document.write('<meta http-equiv="Content-Security-Policy" content="default-src * gap://* \'unsafe-inline\'; style-src \'self\' \'unsafe-inline\'; media-src *" />');
             break;
             default:
-                document.write('<meta http-equiv="Content-Security-Policy" content="default-src \'self\' data:* gap://* tel:* \'unsafe-inline\' \'unsafe-eval\'; style-src \'self\' \'unsafe-inline\'" />');
+                document.write('<meta http-equiv="Content-Security-Policy" content="default-src * data:* gap://* tel:* \'unsafe-inline\' \'unsafe-eval\'; style-src \'self\' \'unsafe-inline\'" />');
             break;
         }
     </script>
